docs/api/qiskit/0.37/qiskit.visualization.plot_state_qsphere.md
---
title: plot_state_qsphere
description: API reference for qiskit.visualization.plot_state_qsphere
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit.visualization.plot_state_qsphere
---

# qiskit.visualization.plot\_state\_qsphere

<span id="qiskit.visualization.plot_state_qsphere" />

`plot_state_qsphere(state, figsize=None, ax=None, show_state_labels=True, show_state_phases=False, use_degrees=False, *, rho=None, filename=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/visualization/state_visualization.py "view source code")

Plot the qsphere representation of a quantum state. Here, the size of the points is proportional to the probability of the corresponding term in the state and the color represents the phase.

**Parameters**

*   **state** ([*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.Statevector")  *or*[*DensityMatrix*](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") *or ndarray*) – an N-qubit quantum state.
*   **figsize** (*tuple*) – Figure size in inches.
*   **ax** (*matplotlib.axes.Axes*) – An optional Axes object to be used for the visualization output. If none is specified a new matplotlib Figure will be created and used. Additionally, if specified there will be no returned Figure since it is redundant.
*   **show\_state\_labels** (*bool*) – An optional boolean indicating whether to show labels for each basis state.
*   **show\_state\_phases** (*bool*) – An optional boolean indicating whether to show the phase for each basis state.
*   **use\_degrees** (*bool*) – An optional boolean indicating whether to use radians or degrees for the phase values in the plot.

**Returns**

A matplotlib figure instance if the `ax` kwarg is not set

**Return type**

Figure

**Raises**

*   **MissingOptionalLibraryError** – Requires matplotlib.
*   [**VisualizationError**](qiskit.visualization.VisualizationError "qiskit.visualization.VisualizationError") – if input is not a valid N-qubit state.
*   **QiskitError** – Input statevector does not have valid dimensions.

**Examples**

```python
from qiskit import QuantumCircuit
from qiskit.quantum_info import Statevector
from qiskit.visualization import plot_state_qsphere

qc = QuantumCircuit(2)
qc.h(0)
qc.cx(0, 1)

state = Statevector(qc)
plot_state_qsphere(state)
```

![../\_images/qiskit.visualization.plot\_state\_qsphere\_0\_0.png](/images/api/qiskit/0.37/qiskit.visualization.plot_state_qsphere_0_0.png)

```python
# You can show the phase of each state and use
# degrees instead of radians

from qiskit.quantum_info import DensityMatrix
import numpy as np

qc = QuantumCircuit(2)
qc.h([0, 1])
qc.cz(0,1)
qc.ry(np.pi/3, 0)
qc.rx(np.pi/5, 1)
qc.z(1)

matrix = DensityMatrix(qc)
plot_state_qsphere(matrix,
     show_state_phases = True, use_degrees = True)
```

![../\_images/qiskit.visualization.plot\_state\_qsphere\_1\_0.png](/images/api/qiskit/0.37/qiskit.visualization.plot_state_qsphere_1_0.png)

